--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -1,10 +1,204 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>reoのecサイト</title>
-  </head>
-  <body>
-    <h1>現在工事中！</h1>
-  </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="ja">
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" >
+    <title>Next Train at TsugaST</title>
+
+<script type="text/javascript">
+<!--
+/*
+ *** 駅の時刻表データを「Nexttrain(TBL)」に準じた形式で *****
+ *** 先頭の要素には＃ で始まる駅停の名称をセット   *****
+*/
+var tblData =  [
+    // 一つ目の時刻表
+[
+  '#  千葉 東京方面(平日)',
+  '05: 24 47 52',
+  '06: 02 07 25 32 46 52 59',
+  '07: 10 19 23 30 37 42 45 50 58',
+  '08: 03 10 23 28 32 40 54',
+  '09: 06 19 38 43 55',
+  '10: 09 22 41 51',
+  '11: 09 23 41',
+  '12: 02 08 26 42 55',
+  '13: 12 25 42 55',
+  '14: 03 27 42 57',
+  '15: 11 25 41 59',
+  '16: 10 28 37 57',
+  '17: 05 22 28 38',
+  '18: 00 18 26 39 55 59',
+  '19: 04 14 23 38 49 59',
+  '20: 12 21 34 43 47 54',
+  '21: 18 23 39 51',
+  '22: 04 23 30 52 56',
+  '23: 14 35 41 48 56',
+  '0 : 26'
+],
+
+[
+  '#  千葉 東京方面(休日)',
+  '04: 16',
+  '05: 24 47 52',
+  '06: 02 07 25 32 46 52 59',
+  '07: 10 23 30 37 42 45 50 58',
+  '08: 03 10 23 28 32 40 54',
+  '09: 06 19 38 43 55',
+  '10: 09 22 41 51',
+  '11: 09 23 41',
+  '12: 02 08 26 42 55',
+  '13: 12 25 42 55',
+  '14: 03 27 42 57',
+  '15: 11 25 41 59',
+  '16: 10 28 37 57',
+  '17: 05 22 28 38',
+  '18: 00 18 26 39 55 59',
+  '19: 04 14 23 38 49 59',
+  '20: 12 21 34 43 47 54',
+  '21: 18 23 39 51',
+  '22: 04 23 30 52 56',
+  '23: 14 35 41 48 56',
+  '0 : 26'
+],
+];  // 時刻表全体の宣言終了
+
+var tblData1 =  [
+    // 一つ目の時刻表
+[
+  '#  千葉 東京方面(平日)',
+  '05: 24 47 52',
+  '06: 02 07 25 32 46 52 59',
+  '07: 10 19 23 30 37 42 45 50 58',
+  '08: 03 10 23 28 32 40 54',
+  '09: 06 19 38 43 55',
+  '10: 09 22 41 51',
+  '11: 09 23 41',
+  '12: 02 08 26 42 55',
+  '13: 12 25 42 55',
+  '14: 03 27 42 57',
+  '15: 11 25 41 59',
+  '16: 10 28 37 57',
+  '17: 05 22 28 38',
+  '18: 00 18 26 39 55 59',
+  '19: 04 14 23 38 49 59',
+  '20: 12 21 34 43 47 54',
+  '21: 18 23 39 51',
+  '22: 04 23 30 52 56',
+  '23: 14 35 41 48 56',
+  '0 : 26'
+],
+];
+
+/* ************* 列車の時刻表の設定はここまで ******************* */
+
+var trainTables = [];
+
+function  hms(tim) {
+    if (tim == '')  return ' ';
+    return ('00' + Math.floor(tim / (60 * 60))).slice(-2) + ':' + ('00' + Math.floor((tim % (60 * 60)) / 60)).slice(-2) + ':' + ('00' + (tim % 60)).slice(-2);
+};
+
+function  hm(tim) {
+    if (tim == '') return ' ';
+    return  ('00' + Math.floor(tim / (60 * 60))).slice(-2) + ':' + ('00' + Math.floor((tim % (60 * 60)) / 60)).slice(-2);
+};
+
+function hm2Time(hm) {
+    return (Math.floor((hm / 100)) * (60 * 60) + (hm % 100) * 60);
+}
+
+function tableSet() {
+  for (i = 0; i < tblData.length; i++){
+    var bTable = tblData[i];
+    for (j = 0; j < bTable.length; j++){
+      if (bTable[j].charAt(0) == "#") {
+        var tbleEl = [bTable[j].substring(2)]; //　列車の行先を先頭要素にセット
+      } else {
+        var lineData = bTable[j].split(":");
+        var hh = lineData[0];
+        if (isFinite(hh)) {   // ：の前が数値だったら
+          var minData = lineData[1].split(" ");
+          for (k = 0; k < minData.length; k++){
+            var mm = (minData[k]).replace(/\D/g,"");
+            var hhmm = hh * 100 + parseInt(mm, 10);
+            if (isFinite(hhmm)) {
+              tbleEl.push(hhmm);
+            }
+          }
+        }
+      }
+    }
+    trainTables.push(tbleEl);
+  }
+}
+
+function clock() {
+    document.getElementById("train_stop").innerHTML = trainTables[tableNo][0];
+    var now = new Date();
+    var nowTime = (now.getHours() * 60 * 60) + (now.getMinutes() * 60) + now.getSeconds();
+//  var tbl = trainTables[tableNo];
+    var bTime, nbTime, nnbTime;
+    bTime = nbTime = nnbTime = '';
+    for (var i = 1; i < trainTables[tableNo].length; i++) {
+        var bt = trainTables[tableNo][i];
+        if (bt > (now.getHours() * 100 + now.getMinutes())) {
+            bTime = hm2Time(bt);
+            if ((i + 1) < trainTables[tableNo].length) {
+                nbTime = hm2Time(trainTables[tableNo][i + 1]);
+                if ((i + 2) < trainTables[tableNo].length) {
+                    nnbTime = hm2Time(trainTables[tableNo][i + 2]);
+                };
+            };
+            break;
+        }
+    };
+    document.getElementById("clock_time").innerHTML = hms(nowTime);
+    document.getElementById("train").innerHTML = hm(bTime);
+    document.getElementById("timeLeft").innerHTML = hms(bTime -nowTime);
+    document.getElementById("train").innerHTML = hm(nbTime);
+    document.getElementById("nntrain").innerHTML = hm(nnbTime);
+};
+
+function startClock() {
+  tableSet();
+    // 時刻表を切り替えるボタンをHTMLに追加する
+    var div_button = document.createElement("div");
+    var btn_element ="";
+    tableNo = 0;
+    for (i = 0; i < trainTables.length; i++) {
+        btn_element = btn_element + ' <input type="button" value="' + trainTables[i][0] + '" onclick="';
+        btn_element = btn_element + 'tableNo = ' + i + ';"/>';
+        div_button.innerHTML = btn_element;
+    };
+    document.getElementById("btn").appendChild(div_button);
+
+    // 上記のclock関数を1000ミリ秒ごと(毎秒)に実行する
+    setInterval(clock, 1000);
+};
+-->
+</script>
+</head>
+<body onLoad="startClock()">
+    <div id="clock_frame" style="color: #00ff00; background-color: black; font-family : Courier,'ＭＳ Ｐゴシック',monospace ;">
+    <br >
+    　現在時刻：<span id="clock_time" style="color: #ffffff"> </span>
+    </div>
+
+    <div id="train_area"  style="color: #00ff00; background-color: #000000; font-family : Courier,'ＭＳ Ｐゴシック',monospace;  font-size: large;">
+    <span id="train_stop" style="color: #ffffff"> </span>
+    <table>
+    <tr>
+        <td>今度の列車</td><td><span id="train" style="color: #ffffff"> </span></td>
+        <td>（出発まで・・ <span id ="timeLeft" style="color: #ffffff"> </span>）</td>
+    </tr>
+    <tr><td>次の列車</td><td><span id="nntrain" style="color: #ffffff"> </span> </td></tr>
+    <tr><td>その次の列車</td><td><span id="nntrain" style="color: #ffffff"> </span> </td></tr>
+    </table>
+    <br />
+        <div id="btn">
+
+        </div>
+    <br />
+    </div>
+</body>
 </html>
