--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>yamawa foods shop site</title>
@@ -10,10 +10,10 @@
       <a href="{% url 'front:index' %}">YamawaFoods</a>
     </h1>
     <ul>
-      {% for foo in products %}
-      <li>{{ foo.product_name}}</li>
-      <img src='{{ MEDIA_URL }}{{foo.thumbnail}}' width=200>
-      <li>価格(税込)：¥{{ foo.price }}</li>
+      {% for i in products %}
+      <li>{{ i.product_name}}</li>
+      <img src='{{ MEDIA_URL }}{{i.thumbnail}}' width=200>
+      <li>価格(税込)：¥{{ i.price }}</li>
       {% endfor %}
     </ul>
   </body>
