--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -10,7 +10,7 @@
       <a href="{% url 'front:index' %}">YamawaFoods</a>
     </h1>
     <ul>
-      {% for i in products %}
+      {% for i in product_list %}
       <li>{{ i.product_name}}</li>
       <img src='{{ MEDIA_URL }}{{i.thumbnail}}' width=200>
       <li>価格(税込)：¥{{ i.price }}</li>
