インデックスの更新

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,11 @@
 <html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Yamawa Foods Shop Site</title>
+    <title>Yamawa Food Shop Site</title>
   </head>
-  <h1><a href="{% url 'front:index' %}">YamawaFoods</a></h1>
+  <h1><a href="{% url 'front:index' %}">YamawaFood.</h1>
   <body>
-    
+
 
     {% block contents %}
     {% endblock %}
