説明蘭をmodels.pyに追加

--- a/templates/front/detail.html
+++ b/templates/front/detail.html
@@ -4,7 +4,7 @@
 <a href="{% url 'front:index' %}">homeに戻る</a>
     {{product.product_name}}
 
-    <img src='{{ MEDIA_URL }}{{product.thumbnail}}' width=300>
+    <img src='{{ MEDIA_URL }}{{product.thumbnail}}' width=400>
     <li>価格(税込)：¥{{ product.price }}</li>
-
+    {{product.description}}
 {% endblock %}
