--- a/templates/front/detail.html
+++ b/templates/front/detail.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 
 {% block contents %}
-<a href="{% url 'front:index' %}">homeに戻る</a>
     {{product.product_name}}
 
     <img src='{{ MEDIA_URL }}{{product.thumbnail}}' width=400>
-    <li>価格(税込)：¥{{ product.price }}</li>
+    <li>価格(税込) ¥{{ product.price }}</li>
     {{product.description}}
 {% endblock %}
