--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -7,7 +7,7 @@
     <img src='{{ MEDIA_URL }}{{i.thumbnail}}' width=200>
     <li>{{ i.product_name}}</li>
   </a>
-  <li>価格(税込)：¥{{ i.price }}</li>
+  <li>価格(税込) ¥{{ i.price }}</li>
   {% endfor %}
 </ul>
 {% endblock %}
