--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,300 @@
 <!DOCTYPE html>
-<html lang="ja" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>Yamawa Food Shop Site</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+<title> yamawa EC </title>
+<meta name="description" content="" />
+
+<link rel="canonical" href="index.html" />
+
+<meta property="og:title" content=" Machine Gun Kelly | Machine Gun Kelly" />
+<meta property="og:description" content="" />
+<meta property="og:url" content="https://machinegunkelly.manheadmerch.com/" />
+
+<meta property="og:type" content="website" />
+
+
+<!--http://cdn.shopify.com/s/files/1/0268/7415/0947/t/6/assets/logo-image-file.png?v=2742870924622980794-->
+<!--https://cdn.shopify.com/s/files/1/0268/7415/0947/t/6/assets/logo-image-file.png?v=2742870924622980794-->
+    <meta property="og:image" content="" />
+    <meta property="og:image:secure_url" content="" />
+
+
+<meta property="og:site_name" content="Machine Gun Kelly" />
+
+<meta name="author" content="Machine Gun Kelly">
+
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
+
+
+
+    <link href="bass.scss.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="custom.scss.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="front-awesome.min.css" rel="stylesheet">
+
+
+  <link href="1.css" rel="stylesheet">
+
+
+    <link href="2.css" rel="stylesheet" type="text/css">
+
+
+<!--<meta name="google-site-verification" content="-xRHu6iHTEJFYoIBmKMN9IsqQ3ZwaQkbYhqjdJwCiZM">-->
+
+
+<!-- mgk_js3.html-->
+
+
+<!-- mgk_js.html-->
+
+
+
+
+
+<!-- mgk_js2.html-->
+
+
   </head>
-    <h1><a href="{% url 'front:index' %}">YamawaFood.</h1>
-      <a href="{% url 'front:index' %}">home</a>
-      <form action="{% url 'front:index' %}" method="get">
-        <input type="text" name="query" value="">
-        <button type="submit" name="button">検索</button>
-      </form>
-      <!-- 検索機能はしょう先生の　【Python Webアプリ 中級】#5 を参照-->
-  <body>
 
 
-    {% block contents %}
-    {% endblock %}
+  <!--[if IE]><body class="page- template-index  has-cart has-prices has-social has-top-navbar has-static-top-navbar has-footer banner-window-width has-slider thumbnails-cropped thumbnail-layout-ordered  is-sold-out ie"> <![endif]-->
+  <!--[if !(IE)]><!--> <body class="page- template-index  has-cart has-prices has-social has-top-navbar has-static-top-navbar has-footer banner-window-width has-slider thumbnails-cropped thumbnail-layout-ordered  is-sold-out"> <!--<![endif]-->
 
 
+  <!-- Add this above the wrap on theme.liquid -->
+
+  <div id="wrap">
+    <div id="shopify-section-annoucementbar" class="shopify-section">
+</div>
+<nav id="navbar-top" class="navbar navbar-default navbar-static-top" role="navigation">
+
+  <div class="container">
+
+    <div class="navbar-header">
+
+      <ul class="nav navbar-icons visible-xs">
+
+
+				<li class="dropdown ">
+					<a class="cartCount" href="https://machinegunkelly.manheadmerch.com/cart" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-shopping-cart"></i> <span class="badge">0</span> <span class="caret"></span></a>
+					<ul class="cart-dropdown dropdown-menu" role="menu">
+						<li class="divider"></li>
+						<li class="cart-btns text-center">
+							<a href="https://machinegunkelly.manheadmerch.com/cart" class="btn btn-primary ajax-cart-btn ajax-cart-view-btn">View Cart</a><a href="https://machinegunkelly.manheadmerch.com/checkout" class="btn btn-main ajax-cart-btn ajax-cart-checkout-btn">Checkout</a>
+						</li>
+					</ul>
+				</li>
+
+        <li><a href="https://machinegunkelly.manheadmerch.com/account"><i class="fa fa-fw fa-user"></i></a></li>
+
+      </ul>
+
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-nav">
+        <span class="sr-only">Toggle main navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand navbar-brand-img" href="{% url 'front:index' %}">
+      <!--  https://cdn.shopify.com/s/files/1/0268/7415/0947/t/6/assets/logo-image-file.png?v=2742870924622980794 -->
+  <img src="yamawa_logo.png" alt="会社のロゴ">
+</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="top-nav">
+
+      <div class="visible-xs">
+
+  <ul class="nav navbar-nav navbar-center">
+
+  </ul>
+      </div>
+
+<ul class="nav navbar-nav navbar-left">
+
+<li class="">
+  <a href="collections/tickets-to-my-downfall-pre-order.html" title="Home">HOME</a>
+</li>
+
+<li class="">
+  <a href="collections/apparel.html" title="Apparel">Apparel</a>
+</li>
+
+<li class="">
+  <a href="collections/accessories.html" title="Accessories">Accessories</a>
+</li>
+
+<li class="">
+  <a href="collections/music.html" title="Music">Music</a>
+</li>
+
+</ul>
+
+<ul class="nav navbar-nav navbar-right">
+
+    <li class="dropdown hidden-xs">
+      <a href="index.html#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i></a>
+      <ul class="dropdown-menu">
+
+        <li><a href="https://machinegunkelly.manheadmerch.com/account/register" id="customer_register_link">Register an account</a></li>
+        <li><a href="https://machinegunkelly.manheadmerch.com/account/login" id="customer_login_link">Log in</a></li>
+
+      </ul>
+    </li>
+
+		    <li class="dropdown hidden-xs">
+			  <a class="cartCount" href="https://machinegunkelly.manheadmerch.com/cart" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-shopping-cart"></i> <span class="badge">0</span> <span class="caret"></span></a>
+			  <ul class="cart-dropdown dropdown-menu" role="menu">
+					<li class="divider"></li>
+					<li class="cart-btns text-center">
+						<a href="https://machinegunkelly.manheadmerch.com/cart" class="btn btn-primary ajax-cart-btn ajax-cart-view-btn">View Cart</a><a href="https://machinegunkelly.manheadmerch.com/checkout" class="btn btn-main ajax-cart-btn ajax-cart-checkout-btn">Checkout</a>
+					</li>
+				  </ul>
+			</li>
+
+      <li>
+<li><a href="index.html#" class="search-toggle"><i class="fa fa-search"></i></a></li>
+
+<form class="search-form navbar-form" action="/search">
+  <div class="input-group">
+    <input type="search" name="q" class="form-control search-bar" autocomplete="off" placeholder="Search" value="">
+    <span class="input-group-btn">
+      <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
+    </span>
+  </div>
+</form></li>
+
+
+</ul>
+
+  </div>
+
+
+  </div>
+
+</nav>
+    <div id="content">
+
+<div id="myCarousel" class="carousel slide" data-current-slide="slide-1" data-interval="2000">
+  <!-- Indicators -->
+
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+
+<div id="slide-1" class="item active">
+
+<!-- mgkのロゴ
+    <img src="https://cdn.shopify.com/s/files/1/0268/7415/0947/t/6/assets/slide-1-image.jpg?v=5589870218449850400" alt="" >
+-->
+
+    <div class="carousel-caption">
+
+    </div>
+</div>
+  </div>
+
+  <!-- Controls -->
+
+</div>
+
+{% block contents %}
+{% endblock %}
+
+<style>
+    .block {
+        background-color: black;
+        margin: 0 auto;
+    }
+</style>
+
+<div class="block">
+<footer id="footer-content" class="footer">
+
+    <div class="container">
+
+      <div class="row">
+
+        <div class="footer__grid col-sm-3">
+
+
+	<h4>ABOUT US</h4>
+私たちについて
+
+  <p class="custom-footer-logo footer-credits">
+    <a href="https://www.manheadmerch.com/" target="_blank">
+      <img src="********************************" alt="" class="img-responsive center-block" />
+    </a>
+  </p>
+
+</div>
+
+
+        <div class="footer__grid col-sm-3">
+
+
+	<h4>Quick Links</h4>
+
+  <ul class="list-nav">
+
+    <li><a href="pages/contact-us.html" title="Contact Us">＊＊＊</a></li>
+
+    <li><a href="pages/privacy-policy.html" title="Privacy Policy">＊＊＊</a></li>
+
+    <li><a href="pages/returns-exchanges.html" title="Shipping &amp; Returns">＊＊＊</a></li>
+
+    <li><a href="pages/shipping-faq.html" title="Shipping FAQ">＊＊＊</a></li>
+
+    <li><a href="pages/site-use-terms-conditions.html" title="Site Use Terms &amp; Conditions">＊＊＊</a></li>
+
+  </ul>
+
+</div>
+
+
+<div class="footer__grid col-sm-3">
+  <h4>Connect With Us</h4>
+    <p class="clearfix social-icons">
+      <a href="https://www.facebook.com/machinegunkellymusic" title="facebook" target="_blank">
+        <i class="fa fa-facebook fa-fw fa-lg"></i>
+      </a>
+
+
+      <a href="https://www.instagram.com/machinegunkelly/" title="instagram" target="_blank">
+      <i class="fa fa-instagram fa-fw fa-lg"></i>
+      </a>
+
+      <a href="https://open.spotify.com/artist/6TIYQ3jFPwQSRmorSezPxX" title="spotify" target="_blank">
+    	<i class="fa fa-spotify fa-fw fa-lg"></i>
+      </a>
+
+
+      <a href="https://twitter.com/machinegunkelly" title="tumblr" target="_blank">
+    	<i class="fa fa-tumblr fa-fw fa-lg"></i>
+      </a>
+
+      <a href="https://www.youtube.com/user/MGKVEVO" title="youtube" target="_blank">
+    	<i class="fa fa-youtube fa-fw fa-lg"></i>
+      </a>
+    </p>
+</div>
+</div>
+  </div>
+
+      <p class="text-center footer-credits">
+        <small>
+          &copy;2020&nbsp;<a href="index.html" title="Machine Gun Kelly homepage">Machine&nbsp;Gun&nbsp;Kelly</a>. <br class="visible-sm">
+          Powered&nbsp;by&nbsp;<a href="https://www.manheadmerch.com/" target="_blank">Manhead</a>.
+        </small>
+      </p>
+
+
+</footer>
+</div>
   </body>
 </html>
