--- a/templates/base.html
+++ b/templates/base.html
@@ -8,24 +8,13 @@
 <title> yamawa EC </title>
 <meta name="description" content="" />
 
-<link rel="canonical" href="index.html" />
-
-<meta property="og:title" content=" Machine Gun Kelly | Machine Gun Kelly" />
-<meta property="og:description" content="" />
-<meta property="og:url" content="https://machinegunkelly.manheadmerch.com/" />
-
-<meta property="og:type" content="website" />
-
-
-<!--http://cdn.shopify.com/s/files/1/0268/7415/0947/t/6/assets/logo-image-file.png?v=2742870924622980794-->
-<!--https://cdn.shopify.com/s/files/1/0268/7415/0947/t/6/assets/logo-image-file.png?v=2742870924622980794-->
     <meta property="og:image" content="" />
     <meta property="og:image:secure_url" content="" />
 
 
-<meta property="og:site_name" content="Machine Gun Kelly" />
+<meta property="og:site_name" content="YamawaFood" />
 
-<meta name="author" content="Machine Gun Kelly">
+<meta name="author" content="YamawaFood">
 
 
 
@@ -45,19 +34,6 @@
     <link href="{% static 'css/2.css' %}" rel="stylesheet" type="text/css">
 
 
-<!--<meta name="google-site-verification" content="-xRHu6iHTEJFYoIBmKMN9IsqQ3ZwaQkbYhqjdJwCiZM">-->
-
-
-<!-- mgk_js3.html-->
-
-
-<!-- mgk_js.html-->
-
-
-
-
-
-<!-- mgk_js2.html-->
 
 
   </head>
@@ -119,19 +95,19 @@
 <ul class="nav navbar-nav navbar-left">
 
 <li class="">
-  <a href="collections/tickets-to-my-downfall-pre-order.html" title="Home">HOME</a>
+  <a href="{% url 'front:index' %}" title="Home">HOME</a>
 </li>
 
 <li class="">
-  <a href="collections/apparel.html" title="Apparel">Apparel</a>
+  <a href="https://www.yamawafoods.com" title="会社">company</a>
 </li>
 
 <li class="">
-  <a href="collections/accessories.html" title="Accessories">Accessories</a>
+  <a href="https://www.yamawafoods.com" title="LLC">LLC</a>
 </li>
 
 <li class="">
-  <a href="collections/music.html" title="Music">Music</a>
+  <a href="https://www.yamawafoods.com" title="＊＊＊">＊＊＊＊</a>
 </li>
 
 </ul>
@@ -209,13 +185,13 @@
 
 <style>
     .block {
-        background-color: black;
+        background-color: #FFFF99;
         margin: 0 auto;
     }
 </style>
 
 <div class="block">
-<footer id="footer-content" class="footer">
+<footer id="footer-content" class="footer text-center">
 
     <div class="container">
 
@@ -227,16 +203,16 @@
 	<h4>ABOUT US</h4>
 私たちについて
 
-  <p class="custom-footer-logo footer-credits">
-    <a href="https://www.manheadmerch.com/" target="_blank">
-      <img src="********************************" alt="" class="img-responsive center-block" />
+  <p class="custom-footer-logo footer-credits center-block">
+    <a href="https://www.yamawafoods.com/kaisya" target="_blank">
+      <img src="{% static 'image/yamawa_logo.png' %}" alt="" class="img-responsive center-block" />
     </a>
   </p>
 
 </div>
 
 
-        <div class="footer__grid col-sm-3">
+<div class="footer__grid col-sm-3">
 
 
 	<h4>Quick Links</h4>
@@ -261,15 +237,15 @@
 <div class="footer__grid col-sm-3">
   <h4>Connect With Us</h4>
     <p class="clearfix social-icons">
-      <a href="https://www.facebook.com/machinegunkellymusic" title="facebook" target="_blank">
+      <a href="https://twitter.com/___kbr" title="twitter" target="_blank">
         <i class="fa fa-facebook fa-fw fa-lg"></i>
       </a>
 
 
-      <a href="https://www.instagram.com/machinegunkelly/" title="instagram" target="_blank">
+      <a href="https://twitter.com/___kbr" title="instagram" target="_blank">
       <i class="fa fa-instagram fa-fw fa-lg"></i>
       </a>
-
+<!--
       <a href="https://open.spotify.com/artist/6TIYQ3jFPwQSRmorSezPxX" title="spotify" target="_blank">
     	<i class="fa fa-spotify fa-fw fa-lg"></i>
       </a>
@@ -278,8 +254,8 @@
       <a href="https://twitter.com/machinegunkelly" title="tumblr" target="_blank">
     	<i class="fa fa-tumblr fa-fw fa-lg"></i>
       </a>
-
-      <a href="https://www.youtube.com/user/MGKVEVO" title="youtube" target="_blank">
+-->
+      <a href="https://www.youtube.com" title="youtube" target="_blank">
     	<i class="fa fa-youtube fa-fw fa-lg"></i>
       </a>
     </p>
@@ -289,8 +265,8 @@
 
       <p class="text-center footer-credits">
         <small>
-          &copy;2020&nbsp;<a href="index.html" title="Machine Gun Kelly homepage">Machine&nbsp;Gun&nbsp;Kelly</a>. <br class="visible-sm">
-          Powered&nbsp;by&nbsp;<a href="https://www.manheadmerch.com/" target="_blank">Manhead</a>.
+          &copy;2020&nbsp;<a href="index.html" title="YamawaFood homepage">Yamawa&nbsp;Food&nbsp;ECsite</a>. <br class="visible-sm">
+          Powered&nbsp;by&nbsp;<a href="https://twitter.com/___kbr" target="_blank">KBR</a>.
         </small>
       </p>
 
